Fix home screen layout issues

--- a/web-app/client/components/ExternalLink/ExternalLink.module.scss
+++ b/web-app/client/components/ExternalLink/ExternalLink.module.scss
@@ -2,6 +2,8 @@
 
 .externalLink {
   @include paragraph;
+  display: flex;
+  align-items: center;
   background-size: 16px;
   text-decoration: none;
   color: $text-black;
@@ -10,5 +12,9 @@
     border-bottom: 1px solid $text-black;
     margin-top: 1px;
     color: $text-black;
+  }
+
+  .imageWrapper {
+    margin: 0 0 0 4px;
   }
 }
